--- a/J_workbook.Rmd
+++ b/J_workbook.Rmd
@@ -37,8 +37,8 @@ library(forecast)
 AmesHouesingDataFrame <- read.csv("C:/Users/Joey/Desktop/stat project/AmesHousePricing/train.csv", header = TRUE)
 AmesHouesingDataFrame_test <- read.csv("C:/Users/Joey/Desktop/house-prices-advanced-regression-techniques/test.csv",header = TRUE)
 
-AmesHouesingDataFrame = read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/train.csv",header = TRUE)
-AmesHouesingTestDataFrame = read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/test.csv",header = TRUE)
+#AmesHouesingDataFrame = read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/train.csv",header = TRUE)
+#AmesHouesingTestDataFrame = read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/test.csv",header = TRUE)
 ```
 
 
@@ -207,7 +207,7 @@ Second Model
 
 adj_var <- c("OverallQual", "LogGrLivArea","YearBuilt","LogLotArea",
              "OverallCond","TotalBsmtSF","LogGarageArea","Fireplaces",
-             "HeatingQC2","KitchenAbvGr","LogScreenPorch","BedroomAbvGr",
+             "HeatingQC2","LogScreenPorch","BedroomAbvGr",
              "LogWoodDeckSF", "SalePrice")
 
 
@@ -220,7 +220,7 @@ lr_model_train2 <- lr_model2[train.index,]
 lr_model_test2 <- lr_model2[-train.index,]
 
 home_reg2 <- lm(lSalePrice ~ . -SalePrice, data = lr_model_train2)
-
+summary(home_reg2)
 
 
 pred3 <- predict(home_reg2,lr_model_test2,type = "response")
@@ -357,7 +357,7 @@ hdata$CentralAir2 <- as.numeric(factor(hdata$CentralAir,
                                   labels = c(0,1) ,ordered = TRUE))
 
 
-hfit <- lm(lSalePrice ~ .-SalePrice, data = lr_model)
+hfit <- lm(lSalePrice ~ .-SalePrice, data = lr_model2)
 summary(hfit)
 hdata$SalePrice = as.numeric(NA)
 hdata$lSalePrice = as.numeric(NA)
