--- a/Models/Cyclone.Rmd
+++ b/Models/Cyclone.Rmd
@@ -9,20 +9,18 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r}
+```{r, include=FALSE}
 library(naniar)
 library(tidyverse)
 library(ggplot2)
 library(plyr)
 library(ggcorrplot)
 library(gridExtra)
-library(olsrr)
 library(gbm)
 library(mice)
 library(moments)
 library(janitor)
 library(readxl)
-library(GGally)
 library(treemapify)
 library(grid)
 library(scales)
@@ -39,33 +37,23 @@ library(car)
 library(leaps)
 library(epiR)
 library(forecast)
-library(ggplot2)
 library(mosaic)
 library(dplyr)
-library(GGally)
 library(gtools)
 library(ggfortify)
 library(readr)
 library(dplyr)
 library(ggpubr)
 library(modelr)
-library(corrplot)
-library(caret)
 library(mlbench)
 library(scales)
-library(olsrr)
-library(tidyverse)
 library(RColorBrewer)
-library(tidyverse)
-library(ggplot2)
-library(scales)
 library(pwr)
 library(agricolae)
 library(huxtable)
 library(lawstat)
 library(lsmeans)
 library(nCDunnett)
-library(dplyr)
 library(WDI)
 library(investr)
 library(multcomp)
@@ -74,7 +62,9 @@ library(DescTools)
 library(GGally)
 library(olsrr)
 library(lmtest)
-
+library(sjPlot)
+library(sjmisc)
+library(sjlabelled)
 ```
 
 ```{r}
@@ -232,28 +222,28 @@ AmesHouesingDataFrame$LandSlopeNum <- as.numeric(factor(AmesHouesingDataFrame$La
 ```
 
 ```{r}
-AmesHouesingDataFrame
+# AmesHouesingDataFrame
 Outliers = AmesHouesingDataFrame[order(-AmesHouesingDataFrame$GrLivArea),]
 Outliers = Outliers[1:2,]
-Outliers
+# Outliers
 AmesHouesingDataFrame = AmesHouesingDataFrame[!(AmesHouesingDataFrame$Id=="524" | AmesHouesingDataFrame$Id=="1299"),]
-AmesHouesingDataFrame
+
 ```
 
 ```{r}
-# Final Feagures
+# Final Features
 model_var = c('LogSalePrice','OverallQual','OverallCond','YearBuilt',
               'ExterCondNum','LogTotalBsmtSF','HeatingQCNum', 
               'BedroomAbvGr','Fireplaces', 'LogGarageArea', 
               "LogGrLivArea","LogWoodDeckSF","LogScreenPorch","LogLotArea")
 
 # initial list of variables to consider
-  # c('LogSalePrice','OverallQual','OverallCond','YearBuilt',
-  #             'ExterCondNum','LogTotalBsmtSF','HeatingQCNum',
-  #             'CentralAirNum','BedroomAbvGr','KitchenAbvGr',
-  #             'TotRmsAbvGrd','Fireplaces', 'LogGarageArea',
-  #             'LogOpenPorchSF','YrSold', "LogGrLivArea","LogWoodDeckSF",
-  #             "LogScreenPorch","LogLotArea","LogMasVnrArea")
+# model_var = c('LogSalePrice','OverallQual','OverallCond','YearBuilt',
+#             'ExterCondNum','LogTotalBsmtSF','HeatingQCNum',
+#             'CentralAirNum','BedroomAbvGr','KitchenAbvGr',
+#             'TotRmsAbvGrd','Fireplaces', 'LogGarageArea',
+#             'LogOpenPorchSF','YrSold', "LogGrLivArea","LogWoodDeckSF",
+#             "LogScreenPorch","LogLotArea","LogMasVnrArea")
 
 lr_model = AmesHouesingDataFrame[,model_var]
 
@@ -283,32 +273,35 @@ pred2 = predict(home_regression, interval = "predict", newdata = lr_model_test)
 stargazer(home_regression, type = 'text')
 
 car::vif(home_regression)
+
+#tab_model(home_regression) # print out an output table 
+
 ```
 
 ```{r}
-ols_step_forward_p(home_regression)
+ols_step_forward_p(home_regression, details = FALSE)
 ```
 
 ```{r}
-ols_step_backward_p(home_regression)
+ols_step_backward_p(home_regression, details = FALSE)
 ```
 
 ```{r}
-ols_step_both_p(home_regression, prem = .05, details = FALSE)
+ols_step_both_p(home_regression, details = FALSE)
 ```
 
 Second Model 
 ```{r}
 # adjusted vars to use in model after above:
 
-adj_var <- c('LogSalePrice','OverallQual','OverallCond','YearBuilt',
-              'LogLotArea','LogTotalBsmtSF','HeatingQCNum', 
-              'BedroomAbvGr','Fireplaces', 'LogGarageArea', 
-              "LogGrLivArea","LogWoodDeckSF","LogScreenPorch")
+# adj_var <- c('LogSalePrice','OverallQual','OverallCond','YearBuilt',
+#               'LogLotArea','LogTotalBsmtSF','HeatingQCNum', 
+#               'BedroomAbvGr','Fireplaces', 'LogGarageArea', 
+#               "LogGrLivArea","LogWoodDeckSF","LogScreenPorch")
 
 # - another test var set based on correlation
 # result Kaggle : .24714
-adj_var <- c("LogSalePrice","OverallQual","GarageArea","LogGrLivArea")
+#adj_var <- c("LogSalePrice","OverallQual","GarageArea","LogGrLivArea")
 
 # - TEST VAR FOR SLIGHTLY IMPROVED KAGGLE SCORE
 # adj_var <- c("LogSalePrice","OverallQual","GarageCars","GrLivArea")
@@ -316,8 +309,34 @@ adj_var <- c("LogSalePrice","OverallQual","GarageArea","LogGrLivArea")
 # adj_var <- c("OverallQual","YearBuilt","YearRemodAdd","TotalBsmtSF",
 #                "GrLivArea","GarageCars","GarageArea", "LogSalePrice")
 
+adj_var <- c("LogSalePrice", "OverallQual", "OverallCond", "YearBuilt","ExterCondNum","LogTotalBsmtSF",
+             "HeatingQCNum", "BedroomAbvGr", "Fireplaces","LogGarageArea","LogGrLivArea","LogWoodDeckSF",
+             "LogScreenPorch","LogLotArea")
+
+forward_var <- c("LogSalePrice", "OverallQual" ,"LogGrLivArea" , "YearBuilt" , "LogLotArea" , "OverallCond" ,
+                      "BedroomAbvGr" , "LogTotalBsmtSF" , "Fireplaces" , "LogGarageArea" , "HeatingQCNum" , 
+                      "LogScreenPorch" , "LogWoodDeckSF" , "CentralAirNum" , "TotRmsAbvGrd" , "KitchenAbvGr" , 
+                      "LogMasVnrArea" , "YrSold")
+
+step_wise_var <- c("LogSalePrice", "OverallQual" ,"LogGrLivArea" , "YearBuilt" , "LogLotArea" , "OverallCond" ,
+                      "BedroomAbvGr" , "LogTotalBsmtSF" , "Fireplaces" , "LogGarageArea" , "HeatingQCNum" , 
+                      "LogScreenPorch" , "LogWoodDeckSF" , "CentralAirNum" ,"ExterCondNum")
+
+
+bk_var <- c('LogSalePrice','OverallQual','OverallCond','YearBuilt',
+            'ExterCondNum','LogTotalBsmtSF','HeatingQCNum',
+            'CentralAirNum','BedroomAbvGr','KitchenAbvGr',
+            'TotRmsAbvGrd','Fireplaces', 'LogGarageArea',
+            'YrSold', "LogGrLivArea","LogWoodDeckSF",
+            "LogScreenPorch","LogLotArea","LogMasVnrArea")
 
 lr_model2 = AmesHouesingDataFrame[,adj_var]
+
+lr_model_bk = AmesHouesingDataFrame[,bk_var]
+
+lr_model_sw = AmesHouesingDataFrame[,step_wise_var]
+
+lr_model_forw = AmesHouesingDataFrame[,forward_var]
 
 set.seed(4)
 train.index <- sample(c(1:dim(lr_model2)[1]), dim(lr_model2)[1]*0.8)
@@ -356,7 +375,10 @@ ols_step_forward_p(home_reg2)
 ols_step_backward_p(home_reg2)
 ```
 
+```{r}
+ols_step_both_p(home_reg2)
 
+```
 
 ```{r}
 hdata <- read.csv("C:/Users/Joey/Desktop/house-prices-advanced-regression-techniques/test.csv",header = TRUE)
@@ -486,13 +508,65 @@ names(h_prediction) <- c("ID", "SalePrice")
 
 h_prediction
 
-write.csv(h_prediction, file = "./housePred12.csv", row.names = FALSE)
+write.csv(h_prediction, file = "./housePredictions.csv", row.names = FALSE)
+
+# kaggle .28941
+# 
+```
+#stats for the custom model
+```{r}
+# custom model
+
+pred_r_squared <- function(linear.model) {
+  #' Use anova() to get the sum of squares for the linear model
+  lm.anova <- anova(linear.model)
+  #' Calculate the total sum of squares
+  tss <- sum(lm.anova$'Sum Sq')
+  # Calculate the predictive R^2
+  pred.r.squared <- 1-PRESS(linear.model)/(tss)
+  
+  return(pred.r.squared)
+}
+pred_r_squared(hfit) # pred r2
+
+PRESS <- function(linear.model) {
+  #' calculate the predictive residuals
+  pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
+  #' calculate the PRESS
+  PRESS <- sum(pr^2)
+  
+  return(PRESS)
+}
+
+
+model_fit_stats <- function(linear.model) {
+  r.sqr <- summary(linear.model)$r.squared
+  adj.r.sqr <- summary(linear.model)$adj.r.squared
+  pre.r.sqr <- pred_r_squared(linear.model)
+  PRESS <- PRESS(linear.model)
+  return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
+  return(return.df)
+}
+
+PRESS(hfit)
+
+AIC(hfit)
+
+model_fit_stats(hfit)
 
 ```
 
 
+
+
+
+
+
+
+
+# model not same as paper
 ```{r}
-ols_step_both_p(home_reg2, prem = .05, details = FALSE)
+#ols_step_both_p(home_reg2, prem = .05, details = FALSE)
 
 model_stepwise <- lm(LogSalePrice ~ OverallQual + LogGrLivArea + YearBuilt + LogLotArea +
                        OverallCond + BedroomAbvGr + LogTotalBsmtSF + Fireplaces +
@@ -510,24 +584,16 @@ names(swPrediction) <- c("ID", "SalePrice")
 swPrediction
 
 write.csv(swPrediction, file = "./stepwisePred.csv", row.names = FALSE)
+# kaggle score .28948
+# rsquare .8811709
+# adj. r square .8801841
+# pred r square .878761
+# cv press 28.22304
 ```
 
 
 ```{r}
-# library(epiR)
-# data <- as.table(matrix(c(670,202,74,640), nrow = 2, byrow = TRUE))
-# rval <- epi.tests(data, conf.level = 0.95)
-# print(rval)  
-
-model_fit_stats <- function(linear.model) {
-  r.sqr <- summary(linear.model)$r.squared
-  adj.r.sqr <- summary(linear.model)$adj.r.squared
-  pre.r.sqr <- pred_r_squared(linear.model)
-  PRESS <- PRESS(linear.model)
-  return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
-  return(return.df)
-}
-model_fit_stats(model_stepwise)
+# STEP WISE STATS 
 
 pred_r_squared <- function(linear.model) {
   #' Use anova() to get the sum of squares for the linear model
@@ -550,10 +616,245 @@ PRESS <- function(linear.model) {
   return(PRESS)
 }
 
+
+model_fit_stats <- function(linear.model) {
+  r.sqr <- summary(linear.model)$r.squared
+  adj.r.sqr <- summary(linear.model)$adj.r.squared
+  pre.r.sqr <- pred_r_squared(linear.model)
+  PRESS <- PRESS(linear.model)
+  return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
+  return(return.df)
+}
+
 PRESS(model_stepwise)
 
 AIC(model_stepwise)
 
+model_fit_stats(model_stepwise)
 
+```
+
+# model from the paper submittal
+```{r}
+# FORWARD MODEL SELECTION
+#ols_step_forward_p(home_reg2, prem = .05, details = FALSE)
+
+# model_forward <- lm(LogSalePrice ~ OverallQual + LogGrLivArea + YearBuilt + LogLotArea +
+#                        OverallCond + BedroomAbvGr + LogTotalBsmtSF + Fireplaces +
+#                        LogGarageArea + HeatingQCNum + LogScreenPorch + LogWoodDeckSF, data = lr_model2)
+
+model_forward <- lm(LogSalePrice ~ OverallQual + LogGrLivArea + YearBuilt + LogLotArea + OverallCond +
+                      BedroomAbvGr + LogTotalBsmtSF + Fireplaces + LogGarageArea + HeatingQCNum + 
+                      LogScreenPorch + LogWoodDeckSF + CentralAirNum + TotRmsAbvGrd + KitchenAbvGr + 
+                      LogMasVnrArea + YrSold, data = lr_model_forw)
+
+
+summary(model_forward)
+hdata$SalePrice = as.numeric(NA)
+hdata$lSalePrice = as.numeric(NA)
+FWPred <- predict(model_forward, interval = "predict", newdata = hdata, na.action = na.omit)
+
+FWPrediction <- data.frame(cbind(hdata$Id, exp(FWPred[,1])))
+
+names(FWPrediction) <- c("ID", "SalePrice")
+
+FWPrediction
+
+write.csv(FWPrediction, file = "./forwardPred.csv", row.names = FALSE)
+# KAGGLE .42961 
+# R^2 .8823582
+# adj. R^2 .8809616
+# pred. R^2 .8788232
+# CV PRESS 28.0415
+
+```
+
+```{r}
+# FORWARD MODEL STATS
+
+
+pred_r_squared <- function(linear.model) {
+  #' Use anova() to get the sum of squares for the linear model
+  lm.anova <- anova(linear.model)
+  #' Calculate the total sum of squares
+  tss <- sum(lm.anova$'Sum Sq')
+  # Calculate the predictive R^2
+  pred.r.squared <- 1-PRESS(linear.model)/(tss)
+  
+  return(pred.r.squared)
+}
+pred_r_squared(model_forward) # pred r2
+
+PRESS <- function(linear.model) {
+  #' calculate the predictive residuals
+  pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
+  #' calculate the PRESS
+  PRESS <- sum(pr^2)
+  
+  return(PRESS)
+}
+
+
+model_fit_stats <- function(linear.model) {
+  r.sqr <- summary(linear.model)$r.squared
+  adj.r.sqr <- summary(linear.model)$adj.r.squared
+  pre.r.sqr <- pred_r_squared(linear.model)
+  PRESS <- PRESS(linear.model)
+  return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
+  return(return.df)
+}
+
+PRESS(model_forward)
+
+AIC(model_forward)
+
+model_fit_stats(model_forward)
+
+```
+
+
+# stepwise from paper
+```{r}
+#ols_step_both_p(home_reg2, prem = .05, details = FALSE)
+
+model_stepwise <- lm(LogSalePrice ~ OverallQual + LogGrLivArea + YearBuilt + LogLotArea +
+                       OverallCond + BedroomAbvGr + LogTotalBsmtSF + Fireplaces +
+                       LogGarageArea + HeatingQCNum + LogScreenPorch + LogWoodDeckSF +
+                       CentralAirNum + ExterCondNum , data = lr_model_sw)
+
+summary(model_stepwise)
+hdata$SalePrice = as.numeric(NA)
+hdata$lSalePrice = as.numeric(NA)
+swPred <- predict(model_stepwise, interval = "predict", newdata = hdata, na.action = na.omit)
+
+swPrediction <- data.frame(cbind(hdata$Id, exp(swPred[,1])))
+
+names(swPrediction) <- c("ID", "SalePrice")
+
+swPrediction
+
+write.csv(swPrediction, file = "./SWPred.csv", row.names = FALSE)
+# kaggle score .28948
+# rsquare .8811709
+# adj. r square .8801841
+# pred r square .878761
+# cv press 28.22304
+```
+
+# stepwise stats from paper
+```{r}
+# STEP WISE STATS 
+
+pred_r_squared <- function(linear.model) {
+  #' Use anova() to get the sum of squares for the linear model
+  lm.anova <- anova(linear.model)
+  #' Calculate the total sum of squares
+  tss <- sum(lm.anova$'Sum Sq')
+  # Calculate the predictive R^2
+  pred.r.squared <- 1-PRESS(linear.model)/(tss)
+  
+  return(pred.r.squared)
+}
+pred_r_squared(model_stepwise) # pred r2
+
+PRESS <- function(linear.model) {
+  #' calculate the predictive residuals
+  pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
+  #' calculate the PRESS
+  PRESS <- sum(pr^2)
+  
+  return(PRESS)
+}
+
+
+model_fit_stats <- function(linear.model) {
+  r.sqr <- summary(linear.model)$r.squared
+  adj.r.sqr <- summary(linear.model)$adj.r.squared
+  pre.r.sqr <- pred_r_squared(linear.model)
+  PRESS <- PRESS(linear.model)
+  return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
+  return(return.df)
+}
+
+PRESS(model_stepwise)
+
+AIC(model_stepwise)
+
+model_fit_stats(model_stepwise)
+
+```
+
+# backwards from  paper
+```{r}
+#ols_step_both_p(home_reg2, prem = .05, details = FALSE)
+
+model_bk <- lm(LogSalePrice ~ OverallQual + OverallCond + YearBuilt + ExterCondNum +
+                       LogTotalBsmtSF+ HeatingQCNum+ CentralAirNum+
+                 BedroomAbvGr + KitchenAbvGr + TotRmsAbvGrd + Fireplaces +
+                 LogGarageArea + YrSold + LogGrLivArea + LogWoodDeckSF +LogScreenPorch + 
+                 LogLotArea + LogMasVnrArea, data = lr_model_bk)
+
+
+
+
+summary(model_bk)
+hdata$SalePrice = as.numeric(NA)
+hdata$lSalePrice = as.numeric(NA)
+BWPred <- predict(model_bk, interval = "predict", newdata = hdata, na.action = na.omit)
+
+BWPrediction <- data.frame(cbind(hdata$Id, exp(BWPred[,1])))
+
+names(BWPrediction) <- c("ID", "SalePrice")
+
+BWPrediction
+
+write.csv(BWPrediction, file = "./BWPred.csv", row.names = FALSE)
+# kaggle score .42936
+# rsquare .8826054
+# adj. r square .8811288
+# pred r square .8787318
+# cv press 28.06264
+```
+
+# backwards from paper
+```{r}
+# STEP WISE STATS 
+
+pred_r_squared <- function(linear.model) {
+  #' Use anova() to get the sum of squares for the linear model
+  lm.anova <- anova(linear.model)
+  #' Calculate the total sum of squares
+  tss <- sum(lm.anova$'Sum Sq')
+  # Calculate the predictive R^2
+  pred.r.squared <- 1-PRESS(linear.model)/(tss)
+  
+  return(pred.r.squared)
+}
+pred_r_squared(model_bk) # pred r2
+
+PRESS <- function(linear.model) {
+  #' calculate the predictive residuals
+  pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
+  #' calculate the PRESS
+  PRESS <- sum(pr^2)
+  
+  return(PRESS)
+}
+
+
+model_fit_stats <- function(linear.model) {
+  r.sqr <- summary(linear.model)$r.squared
+  adj.r.sqr <- summary(linear.model)$adj.r.squared
+  pre.r.sqr <- pred_r_squared(linear.model)
+  PRESS <- PRESS(linear.model)
+  return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
+  return(return.df)
+}
+
+PRESS(model_bk)
+
+AIC(model_bk)
+
+model_fit_stats(model_bk)
 
 ```
