--- a/analysis1.Rmd
+++ b/analysis1.Rmd
@@ -43,7 +43,8 @@ and even more so using a log-log transformation. We will proceed with a log-log 
 and create a linear regression line so that we can further test assumptions of the data. 
 ```{r}
 homefit <- lm(log(SalePrice)~log(GrLivArea), data = n3homedf)
-
+nat_fit <- lm(SalePrice~GrLivArea, data = n3homedf)
+ols_plot_diagnostics(nat_fit)
 ols_plot_diagnostics(homefit)
 
 ```
@@ -57,12 +58,15 @@ maybe those points are of a different "class" or "category" than the bulk of our
 ```{r}
 # exploring the outliers
 n3homedf %>% ggplot(aes(log(GrLivArea), log(SalePrice), color = as.factor(SaleCondition == "Partial"))) +
-  geom_point()
+  geom_point() + ggtitle("Scatter plot of Home Sale Condition") +
+  xlab("Log GrLivArea") +
+  ylab("Log Sale Price")
 
 n3homedf %>% ggplot(aes(log(GrLivArea), log(SalePrice), color = as.factor(SaleType))) +
-  geom_point()
+  geom_point() + ggtitle("Scatterplot of Home Sale Type") + 
+  xlab("Log GrLivArea") + ylab("Log Sale Price")
 
-n3homedf %>% ggplot(aes(log(GrLivArea), log(SalePrice), color = as.factor(YrSold == 2008 | YrSold == 2007))) + geom_point()
+n3homedf %>% ggplot(aes(log(GrLivArea), log(SalePrice), color = as.factor(YrSold == 2008 | YrSold == 2007))) + geom_point() + ggtitle("Scatterplot of Year Home Sold") + xlab("Year Sold") + ylab("Log Sale Price")
 
 
 # dim(n3homedf %>% filter(SaleCondition == "Partial"))
@@ -111,6 +115,8 @@ diagnostics of the linear model fit our assumptions.
 ```{r}
 no_outlier_fit <- lm(log(SalePrice)~log(GrLivArea), data = n3homedf_noout)
 ols_plot_diagnostics(no_outlier_fit)
+summary(no_outlier_fit)
+summary(nat_fit)
 
 ```
 it appears that observation 135 is pulling the data to the left quite a bit. we will investigate this point
@@ -178,3 +184,88 @@ summary(red_model) # adj. R2 = .5002
 ```
 after analysis of the full and reduced model, because the adjusted R^2 favors the model
 with the interaction parameters we will proceed with the full model going forward.  
+
+
+```{r}
+# REDUCED MODEL
+model_fit_stats <- function(linear.model) {
+  r.sqr <- summary(linear.model)$r.squared
+  adj.r.sqr <- summary(linear.model)$adj.r.squared
+  pre.r.sqr <- pred_r_squared(linear.model)
+  PRESS <- PRESS(linear.model)
+  return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
+  return(return.df)
+}
+
+
+pred_r_squared <- function(linear.model) {
+  #' Use anova() to get the sum of squares for the linear model
+  lm.anova <- anova(linear.model)
+  #' Calculate the total sum of squares
+  tss <- sum(lm.anova$'Sum Sq')
+  # Calculate the predictive R^2
+  pred.r.squared <- 1-PRESS(linear.model)/(tss)
+  
+  return(pred.r.squared)
+}
+pred_r_squared(red_model) # pred r2
+
+PRESS <- function(linear.model) {
+  #' calculate the predictive residuals
+  pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
+  #' calculate the PRESS
+  PRESS <- sum(pr^2)
+  
+  return(PRESS)
+}
+
+PRESS(red_model)
+
+AIC(red_model)
+
+model_fit_stats(red_model)
+summary(red_model)
+
+```
+
+```{r}
+# FULL MODEL
+model_fit_stats <- function(linear.model) {
+  r.sqr <- summary(linear.model)$r.squared
+  adj.r.sqr <- summary(linear.model)$adj.r.squared
+  pre.r.sqr <- pred_r_squared(linear.model)
+  PRESS <- PRESS(linear.model)
+  return.df <- data.frame(r.squared = r.sqr, adj.r.squared = adj.r.sqr, pred.r.squared = pre.r.sqr, press = PRESS)
+  return(return.df)
+}
+
+
+pred_r_squared <- function(linear.model) {
+  #' Use anova() to get the sum of squares for the linear model
+  lm.anova <- anova(linear.model)
+  #' Calculate the total sum of squares
+  tss <- sum(lm.anova$'Sum Sq')
+  # Calculate the predictive R^2
+  pred.r.squared <- 1-PRESS(linear.model)/(tss)
+  
+  return(pred.r.squared)
+}
+pred_r_squared(red_model) # pred r2
+
+PRESS <- function(linear.model) {
+  #' calculate the predictive residuals
+  pr <- residuals(linear.model)/(1-lm.influence(linear.model)$hat)
+  #' calculate the PRESS
+  PRESS <- sum(pr^2)
+  
+  return(PRESS)
+}
+
+PRESS(full_model)
+
+AIC(full_model)
+
+model_fit_stats(full_model)
+summary(full_model)
+
+```
